# Game-Of-Life

./: CMakeLists.txt  README.md  config.c  config.h  configGraph.c  graph.c  graph.h  logic.c  logic.h  main.c
saved_worlds/: default_saved.txt  example.txt  hejka.txt
world_maps/: default_world.txt  one_more_world.txt
